# siftx

./: .gitignore  README.md  pyproject.toml
siftx/: cli.py  files.py  highlight.py  output.py  search.py  text.txt
siftx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
