[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siftx"
version = "0.2.1"
description = "A simple grep-like CLI tools for searching and filtering text"
readme = "README.md"
license = { text = "MIT"}
authors = [{ name = "Musa Adam" }]
requires-python = ">=3.8"

[project.scripts]
siftx = "siftx.cli:main"